--- a/projects/index.html
+++ b/projects/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en-us"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+    <img src="http://localhost:1313/images/moon.png" alt="Website's icon">
+</head>
+<html lang="en-us"><head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -31,11 +34,7 @@
 
     <ul><li>
             <span>2024-08-01</span>
-            <a href="/projects/connect/">Domino, share your activity, get motivated</a>
-        </li>
-        <li>
-            <span>2024-07-01</span>
-            <a href="/projects/internshare/">Internshare, find your next internship !</a>
+            <a href="/projects/domino/">Domino, share your activity, get motivated</a>
         </li>
         
     </ul>
