--- a/projects/index.html
+++ b/projects/index.html
@@ -33,7 +33,7 @@
 
 
     <ul><li>
-            <span>2024-08-01</span>
+            <span>2024</span>
             <a href="/projects/domino/">Domino, share your activity, get motivated</a>
         </li>
         
