--- a/projects/domino/index.html
+++ b/projects/domino/index.html
@@ -6,7 +6,8 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <meta name="description" content="Domino (the app final name is still under research and development) is an app created to enhance one&rsquo;s experience of going outside. Let&rsquo;s define a new term called instant tourism by looking into what the app offers.
+   <meta name="description" content="What is Domino ?
+Domino (the app final name is still under research and development) is an app created to enhance one&rsquo;s experience of going outside. Let&rsquo;s define a new term called instant tourism by looking into what the app offers.
 The app is centered around a main function, placing activities on a map. Whenever you are going to the skatepark with friends, attending an old car gathering or even sipping a drink near the beach, you are free to share this activity by placing a pin on the map and describing few information&hellip; The goal is to motivate people to go outside and do activites they would have never done otherwise. It works best when in a foregn country or travelling to a place you haven&rsquo;t meticulously prepared your tight planning. It gives you hints on where to eat, what to do, or find exceptional events on a 2h time-frame.">  
 
   <title>
@@ -40,10 +41,20 @@ The app is centered around a main function, placing activities on a map. Wheneve
 
     
 
-    <p>Domino (the app final name is still under research and development) is an app created to enhance one&rsquo;s experience of going outside. Let&rsquo;s define a new term called <em>instant tourism</em> by looking into what the app offers.</p>
+    <h3 id="what-is-domino-">What is Domino ?</h3>
+<p>Domino (the app final name is still under research and development) is an app created to enhance one&rsquo;s experience of going outside. Let&rsquo;s define a new term called <em>instant tourism</em> by looking into what the app offers.</p>
 <p>The app is centered around a main function, placing activities on a map. Whenever you are going to the skatepark with friends, attending an old car gathering or even sipping a drink near the beach, you are free to share this activity by placing a pin on the map and describing few information&hellip; The goal is to motivate people to go outside and do activites they would have never done otherwise. It works best when in a foregn country or travelling to a place you haven&rsquo;t meticulously prepared your tight planning. It gives you hints on where to eat, what to do, or find exceptional events on a 2h time-frame.</p>
 <p>The <em>instant</em> in instant tourism comes from this last rule. The pins created will look bigger on the map if it&rsquo;s liked by the community but will be forced to disappear after 2h, bringing light to other less famous activities or more time-limited events.</p>
-<p>Questions not answered yet, feel free to share ideas</p>
+<h3 id="work-in-progress">Work in progress</h3>
+<p>Here are some screens of the current state of the app with some work in progress advancements.</p>
+<h4 id="heading"></h4>
+<p><img src="/images/frame_app.png" alt="Frame of the app WIP"></p>
+<p><em>The map in the screen comes from a video game because I am not using a world map yet as I didn&rsquo;t chooe wich provider to use.</em></p>
+<h5 id="heading-1"></h5>
+<p><img src="/images/logo.png" alt="App logo"></p>
+<p><em>Here is the logo I imagined for the app. A &ldquo;one fine line&rdquo; design with an activity, people and a pin.</em></p>
+<h3 id="questions-not-answered-yet">Questions not answered yet</h3>
+<p><em>feel free to share ideas</em></p>
 <ul>
 <li>artistic direction (mostly name and color palette, the logo is done)</li>
 <li>how to moderate pin from the community ?</li>
@@ -51,8 +62,6 @@ The app is centered around a main function, placing activities on a map. Wheneve
 <li>how to properly use map data, have few hints</li>
 <li>any KYC or phone number to better identify and block prohibited behaviors ?</li>
 </ul>
-<hr>
-<p>Work in progress&hellip;</p>
 
 </article>
 
