--- a/school-projects/deep-language/index.html
+++ b/school-projects/deep-language/index.html
@@ -67,7 +67,7 @@ Better Web Integration: Deploying the model on a scalable platform and improving
 Conclusion
 The DeepLanguage project provided valuable experience in applying machine learning techniques to speech recognition problems. It highlighted the importance of data quality and model architecture in AI development. Through this project, I gained a deeper understanding of AI, speech processing, and web development, and I plan to continue exploring this field.</p>
 <p>The project also paved the way for future work, such as expanding language recognition capabilities and improving the deployment of AI models in web applications.</p>
-<p>You can find the code and further details of the project on <a href="https://github.com/Zoko91/deeplanguage">Github</a>.
+<p>You can find the code and further details of the project on <a href="https://github.com/jbeasse/deeplanguage">Github</a>.
 You can also download the French report <a href="pdf/FR_presentation_deeplanguage.pdf">here</a>.</p>
 
 </article>
