projects update: added new elements

--- a/projects/domino/index.html
+++ b/projects/domino/index.html
@@ -61,6 +61,7 @@ The app is centered around a main function, placing activities on a map. Wheneve
 <li>will the app mainly focus on friends (lower customer retention this way, no need to moderate)</li>
 <li>how to properly use map data, have few hints</li>
 <li>any KYC or phone number to better identify and block prohibited behaviors ?</li>
+<li>current version built in swift for practical reasons, I have both a macbook and an iphone, but deployment is expensive on IOS and lacks android support.</li>
 </ul>
 
 </article>
