--- a/school-projects/palette/index.html
+++ b/school-projects/palette/index.html
@@ -7,9 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
    <meta name="description" content="Introduction
-Palette your emotions is a project born out of the second-year TransPromotion initiative at ENSC. The goal of the project was to create an innovative tool that would generate a color palette based on emotions and sentiments extracted from text. By leveraging natural language processing (NLP) and emotion-color theory, we aimed to bridge the gap between human emotions and visual representation through color.
-Concept and Approach
-The idea behind Palette was simple yet ambitious: use artificial intelligence (AI) to analyze the sentiment of a text input and convert those emotions into corresponding colors. We explored existing research on the relationship between emotions and colors and studied how modern tools like OpenAI’s GPT-3 could help us perform sentiment analysis.">  
+Palette your emotions is a project born out of the second-year TransPromotion initiative (4 months school project of 6 people) at ENSC. The goal of the project was to create an innovative tool that would generate a color palette based on emotions and sentiments extracted from text. By leveraging natural language processing (NLP) and emotion-color theory, we aimed to bridge the gap between human emotions and visual representation through color.">  
 
   <title>
     
@@ -43,7 +41,7 @@ The idea behind Palette was simple yet ambitious: use artificial intelligence (A
     
 
     <h2 id="introduction">Introduction</h2>
-<p><strong>Palette your emotions</strong> is a project born out of the second-year TransPromotion initiative at ENSC. The goal of the project was to create an innovative tool that would generate a color palette based on emotions and sentiments extracted from text. By leveraging natural language processing (NLP) and emotion-color theory, we aimed to bridge the gap between human emotions and visual representation through color.</p>
+<p><strong>Palette your emotions</strong> is a project born out of the second-year TransPromotion initiative (4 months school project of 6 people) at ENSC. The goal of the project was to create an innovative tool that would generate a color palette based on emotions and sentiments extracted from text. By leveraging natural language processing (NLP) and emotion-color theory, we aimed to bridge the gap between human emotions and visual representation through color.</p>
 <h2 id="concept-and-approach">Concept and Approach</h2>
 <p>The idea behind Palette was simple yet ambitious: use artificial intelligence (AI) to analyze the sentiment of a text input and convert those emotions into corresponding colors. We explored existing research on the relationship between emotions and colors and studied how modern tools like OpenAI’s GPT-3 could help us perform sentiment analysis.</p>
 <p>Our first challenge was to identify a way to accurately link emotions to colors in a universal and culturally relevant manner. We wanted to ensure that the emotions extracted from the text were reliably mapped to the appropriate hues, saturations, and tones that reflect those feelings.</p>
