link project update

--- a/school-projects/find-your-internship/index.html
+++ b/school-projects/find-your-internship/index.html
@@ -66,7 +66,8 @@ Here is @<a href="https://github.com/tristangclvs">Tristan’s GitHub profile</a
 <p>Despite these challenges, we learned a lot about mobile app development, from setting up efficient backend systems to designing user-friendly interfaces. Working with React Native was an invaluable experience, as it allowed us to target both iOS and Android platforms with a single codebase.</p>
 <h2 id="conclusion-and-future-directions">Conclusion and Future Directions</h2>
 <p>The Find Your Internship project proved to be a valuable learning experience in mobile app development, from building the frontend interface to integrating a robust backend system. While the app is fully functional, we planned to build a similar product with a bigger scale than a school projet. This is still a world in progress and it could appear in <em>#projects</em> soon.</p>
-<p>You can access the complete project report in French by downloading it <a href="/pdf/FR_presentation_findyourinternship">here</a>.</p>
+<p>You can access the complete project report in French by downloading it <a href="/pdf/FR_presentation_findyourinternship">here</a>.
+The 2023 version of this project coded in React Native is available in this <a href="https://github.com/Zoko91/find_your_internship">github link</a></p>
 
 </article>
 
